--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <use href="./images/icons.svg#icon-close-modal-icon"></use>
                 </svg>
             </button>
+            <div class="mobile-menu-content-wrap">
             <ul class="mobile-menu-nav list">
                 <li class="mobile-menu-nav-item">
                     <a class="mobile-menu-nav-link link current"  href="/">Studio</a>
@@ -72,6 +73,7 @@
 
                 </li>
             </ul>
+            <div class="mobile-menu-info-soc-wrap">
             <ul class="mobile-menu-info list">
                 <li class="mobile-menu-info-item">
                     <a class="mobile-menu-tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -110,6 +112,8 @@
                     </a>
                 </li>
             </ul>
+        </div>
+        </div>
         </div>
         </div>  
     </header>
