--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <!-- Header -->
-<!-- <header class="page-header">
+ <header class="page-header">
     <div class="container header-container">
     <nav class="page-nav">
         <a class="header-logo logo link" href="./index.html" ><span class="logo-brand">Web</span>Studio </a>
@@ -41,7 +41,7 @@
             </li>
         </ul>  
     </div>  
-</header> -->
+</header> 
     <main>
 <!-- Примеры наших проектов -->
 <section class="portfolio section">
@@ -63,11 +63,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-        <source srcset="./images/portfolio-desktop/pic1-desktop.jpg 1x ./images/portfolio-desktop/pic1-desctop@2x.jpg 2x" 
+        <source srcset="./images/portfolio-desktop/pic1-desktop.jpg 1x, ./images/portfolio-desktop/pic1-desktop@2x.jpg 2x" 
         media="(min-width: 1200px)">
-        <source srcset="./images/portfolio-tablet/pic1-tablet.jpg 1x ./images/portfolio-tablet/pic1-tablet@2x.jpg 2x" 
+        <source srcset="./images/portfolio-tablet/pic1-tablet.jpg 1x, ./images/portfolio-tablet/pic1-tablet@2x.jpg 2x" 
         media="(min-width: 768px)">
-        <source srcset="./images/portfolio-mobile/pic1-mobile.jpg 1x ./images/portfolio-mobile/pic1-mobile@2x.jpg 2x" 
+        <source srcset="./images/portfolio-mobile/pic1-mobile.jpg 1x, ./images/portfolio-mobile/pic1-mobile@2x.jpg 2x" 
         media="(max-width: 767px)">
                     <img 
                     class="example-img"  
@@ -88,11 +88,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic2-desktop.jpg 1x ./images/portfolio-desktop/pic2-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic2-desktop.jpg 1x, ./images/portfolio-desktop/pic2-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic2-tablet.jpg 1x ./images/portfolio-tablet/pic2-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic2-tablet.jpg 1x, ./images/portfolio-tablet/pic2-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic2-mobile.jpg 1x ./images/portfolio-mobile/pic2-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic2-mobile.jpg 1x, ./images/portfolio-mobile/pic2-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img"   
@@ -113,11 +113,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
             <picture>
-                <source srcset="./images/portfolio-desktop/pic3-desktop.jpg 1x ./images/portfolio-desktop/pic3-desctop@2x.jpg 2x" 
+                <source srcset="./images/portfolio-desktop/pic3-desktop.jpg 1x, ./images/portfolio-desktop/pic3-desktop@2x.jpg 2x" 
                 media="(min-width: 1200px)">
-                <source srcset="./images/portfolio-tablet/pic3-tablet.jpg 1x ./images/portfolio-tablet/pic3-tablet@2x.jpg 2x" 
+                <source srcset="./images/portfolio-tablet/pic3-tablet.jpg 1x, ./images/portfolio-tablet/pic3-tablet@2x.jpg 2x" 
                 media="(min-width: 768px)">
-                <source srcset="./images/portfolio-mobile/pic3-mobile.jpg 1x ./images/portfolio-mobile/pic3-mobile@2x.jpg 2x" 
+                <source srcset="./images/portfolio-mobile/pic3-mobile.jpg 1x, ./images/portfolio-mobile/pic3-mobile@2x.jpg 2x" 
                 media="(max-width: 767px)">
                             <img 
                             class="example-img" 
@@ -138,11 +138,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic4-desktop.jpg 1x ./images/portfolio-desktop/pic4-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic4-desktop.jpg 1x, ./images/portfolio-desktop/pic4-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic4-tablet.jpg 1x ./images/portfolio-tablet/pic4-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic4-tablet.jpg 1x, ./images/portfolio-tablet/pic4-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic4-mobile.jpg 1x ./images/portfolio-mobile/pic4-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic4-mobile.jpg 1x, ./images/portfolio-mobile/pic4-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img" 
@@ -165,11 +165,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic5-desktop.jpg 1x ./images/portfolio-desktop/pic5-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic5-desktop.jpg 1x, ./images/portfolio-desktop/pic5-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic5-tablet.jpg 1x ./images/portfolio-tablet/pic5-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic5-tablet.jpg 1x, ./images/portfolio-tablet/pic5-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic5-mobile.jpg 1x ./images/portfolio-mobile/pic5-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic5-mobile.jpg 1x, ./images/portfolio-mobile/pic5-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img" 
@@ -191,11 +191,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic6-desktop.jpg 1x ./images/portfolio-desktop/pic6-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic6-desktop.jpg 1x, ./images/portfolio-desktop/pic6-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic6-tablet.jpg 1x ./images/portfolio-tablet/pic6-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic6-tablet.jpg 1x, ./images/portfolio-tablet/pic6-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic6-mobile.jpg 1x ./images/portfolio-mobile/pic6-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic6-mobile.jpg 1x, ./images/portfolio-mobile/pic6-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img" 
@@ -216,11 +216,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic7-desktop.jpg 1x ./images/portfolio-desktop/pic7-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic7-desktop.jpg 1x, ./images/portfolio-desktop/pic7-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic7-tablet.jpg 1x ./images/portfolio-tablet/pic7-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic7-tablet.jpg 1x, ./images/portfolio-tablet/pic7-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic7-mobile.jpg 1x ./images/portfolio-mobile/pic7-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic7-mobile.jpg 1x, ./images/portfolio-mobile/pic7-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img" 
@@ -242,11 +242,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic8-desktop.jpg 1x ./images/portfolio-desktop/pic8-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic8-desktop.jpg 1x, ./images/portfolio-desktop/pic8-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic8-tablet.jpg 1x ./images/portfolio-tablet/pic8-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic8-tablet.jpg 1x, ./images/portfolio-tablet/pic8-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic8-mobile.jpg 1x ./images/portfolio-mobile/pic8-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic8-mobile.jpg 1x, ./images/portfolio-mobile/pic8-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img" 
@@ -268,11 +268,11 @@
         <a href="" class="example-link link">
             <div class="overlay-wrapper">
                 <picture>
-                    <source srcset="./images/portfolio-desktop/pic9-desktop.jpg 1x ./images/portfolio-desktop/pic9-desctop@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-desktop/pic9-desktop.jpg 1x, ./images/portfolio-desktop/pic9-desktop@2x.jpg 2x" 
                     media="(min-width: 1200px)">
-                    <source srcset="./images/portfolio-tablet/pic9-tablet.jpg 1x ./images/portfolio-tablet/pic9-tablet@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-tablet/pic9-tablet.jpg 1x, ./images/portfolio-tablet/pic9-tablet@2x.jpg 2x" 
                     media="(min-width: 768px)">
-                    <source srcset="./images/portfolio-mobile/pic9-mobile.jpg 1x ./images/portfolio-mobile/pic9-mobile@2x.jpg 2x" 
+                    <source srcset="./images/portfolio-mobile/pic9-mobile.jpg 1x, ./images/portfolio-mobile/pic9-mobile@2x.jpg 2x" 
                     media="(max-width: 767px)">
                                 <img 
                                 class="example-img" 
