--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </ul>
             <div class="mobile-menu-info-soc-wrap">
             <ul class="mobile-menu-info list">
-                <li class="mobile-menu-info-item">
-                    <a class="mobile-menu-tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li class="mobile-menu-info-item number">
+                    <a class="mobile-menu-tel-link link " href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
                 <li class="mobile-menu-info-item">
                     <a class="mobile-menu-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -84,29 +84,29 @@
             </ul>
             <ul class="mobile-menu-soc list">
                 <li class="mobile-menu-soc-item">
-                    <a href="" class="mobile-menu--soc-link link">
-                        <svg class="mobile-menu--soc-icon" width="16" height="16">
+                    <a href="" class="mobile-menu-soc-link link">
+                        <svg class="mobile-menu-soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-soc-item">
-                    <a href="" class="mobile-menu--soc-link link">
-                        <svg class="mobile-menu-soc-icon" width="16" height="16">
+                    <a href="" class="mobile-menu-soc-link link">
+                        <svg class="mobile-menu-soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-soc-item">
-                    <a href="" class="mobile-menu--soc-link link">
-                        <svg class="mobile-menu--soc-icon" width="16" height="16">
+                    <a href="" class="mobile-menu-soc-link link">
+                        <svg class="mobile-menu-soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>  
                 </li>
                 <li class="mobile-menu-soc-item">
-                    <a href="" class="mobile-menu--soc-link link">
-                        <svg class="mobile-menu--soc-icon" width="16" height="16">
+                    <a href="" class="mobile-menu-soc-link link">
+                        <svg class="mobile-menu-soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
