--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 </footer>
 <!--  -->
 <!-- ================= Modal Window ========= -->
-<!-- <div class="backdrop is-hidden" data-modal>
+ <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
 <svg class="modal-close-button-icon" width="8" height="8">
@@ -554,11 +554,11 @@
         name="user-message" 
         class="modal-form-massage"
         placeholder="Text input"></textarea>
-    </label> -->
+    </label> 
 
     <!-- Check-box -->
     <!--  -->
-    <!-- <input 
+    <input 
     type="checkbox" 
     class="modal-form-check visually-hidden " 
     id="user-policy">
@@ -574,7 +574,7 @@
     <button type="submit" class="modal-form-submit btn">Send</button>
 </form>
 </div>
-</div>  -->
+</div> 
 <script src="./js/mobile-menu.js"></script>
 <script src="./js/modal.js"></script>
 </body>
