--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
         <a class="header-logo logo link" href="./index.html" ><span class="logo-brand">Web</span>Studio </a>
         <ul class="menu list">
             <li class="menu-item">
-                <a class="menu-link link current"  href="/">Studio</a>
+                <a class="menu-link link "  href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-                <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+                <a class="menu-link link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item">
                 <a class="menu-link link" href="/">Contacts</a>
@@ -62,10 +62,10 @@
         </button>
         <ul class="mobile-menu-nav list">
             <li class="mobile-menu-nav-item">
-                <a class="mobile-menu-nav-link link current"  href="/">Studio</a>
+                <a class="mobile-menu-nav-link link"  href="./index.html">Studio</a>
                 </li>
             <li class="mobile-menu-nav-item">
-                <a class="mobile-menu-nav-link link" href="./portfolio.html">Portfolio</a>
+                <a class="mobile-menu-nav-link link  current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="mobile-menu-nav-item">
                 <a class="mobile-menu-nav-link link" href="/">Contacts</a>
