--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
         </nav>
 
         <button 
-        class="mobile-menu-open-btn js-open-menu" 
-                    aria-expanded="false"
-                    aria-controls="mobile-menu"
-                    type="button">
+        class="mobile-menu-open-btn"
+                    type="button" data-menu-open>
             <svg class="mobile-menu-open-icon" width="32" height="22">
                 <use href="./images/icons.svg#icon-menu-hamburger"></use>
             </svg>
@@ -51,11 +49,12 @@
                 </li>
             </ul>  
         </div>
-        <div class="mobile-menu js-menu-container " 
-        id="mobile-menu">
+        <div class="mobile-menu is-hidden"
+        data-menu
+        >
             <div class="mobile-menu-container container">
-            <button class="mobile-menu-close-btn js-close-menu" 
-            type="button">
+            <button class="mobile-menu-close-btn " 
+            type="button" data-menu-close>
                 <svg class="menu-close-btn-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close-modal-icon"></use>
                 </svg>
