--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
         <a class="header-logo logo link" href="./index.html" ><span class="logo-brand">Web</span>Studio </a>
         <ul class="menu list">
             <li class="menu-item">
-                <a class="menu-link link "  href="./index.html">Studio</a>
+                <a class="menu-link link current"  href="/">Studio</a>
             </li>
             <li class="menu-item">
-                <a class="menu-link link current" href="./portfolio.html">Portfolio</a>
+                <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item">
                 <a class="menu-link link" href="/">Contacts</a>
@@ -34,10 +34,8 @@
     </nav>
 
     <button 
-    class="mobile-menu-open-btn js-open-menu" 
-                aria-expanded="false"
-                aria-controls="mobile-menu"
-                type="button">
+    class="mobile-menu-open-btn"
+                type="button" data-menu-open>
         <svg class="mobile-menu-open-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-menu-hamburger"></use>
         </svg>
@@ -51,21 +49,22 @@
             </li>
         </ul>  
     </div>
-    <div class="mobile-menu js-menu-container " 
-    id="mobile-menu">
+    <div class="mobile-menu is-hidden"
+    data-menu
+    >
         <div class="mobile-menu-container container">
-        <button class="mobile-menu-close-btn js-close-menu" 
-        type="button">
+        <button class="mobile-menu-close-btn " 
+        type="button" data-menu-close>
             <svg class="menu-close-btn-icon" width="8" height="8">
                 <use href="./images/icons.svg#icon-close-modal-icon"></use>
             </svg>
         </button>
         <ul class="mobile-menu-nav list">
             <li class="mobile-menu-nav-item">
-                <a class="mobile-menu-nav-link link"  href="./index.html">Studio</a>
+                <a class="mobile-menu-nav-link link current"  href="/">Studio</a>
                 </li>
             <li class="mobile-menu-nav-item">
-                <a class="mobile-menu-nav-link link  current" href="./portfolio.html">Portfolio</a>
+                <a class="mobile-menu-nav-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="mobile-menu-nav-item">
                 <a class="mobile-menu-nav-link link" href="/">Contacts</a>
@@ -425,7 +424,7 @@
 </div>
 </div>
 </footer>
-
+<script src="./js/mobile-menu.js"></script>
 <script src="./js/modal.js"></script>
 </body>
 </html>
