wort for mistakes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </ul>
             <div class="mobile-menu-info-soc-wrap">
             <ul class="mobile-menu-info list">
-                <li class="mobile-menu-info-item number">
+                <li class="mobile-menu-info-item ">
                     <a class="mobile-menu-tel-link link " href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
                 <li class="mobile-menu-info-item">
